# Exoutia_flashcards

./: .gitignore  manage.py  pyproject.toml
cards/: models.py  urls.py  views.py
cards/migrations/: 0001_initial.py
cards/templates/: box_links.html
cards/templates/cards/: base.html  box.html  box_links.html  card.html  card_check_form.html  card_form.html  card_list.html  navigation.html
cards/templatetags/: cards_tags.py
flascards/: asgi.py  settings.py  urls.py  wsgi.py
